--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
             </div>
             <div class="col-lg-3">
                 <h6 style="margin-bottom: 15px;">همراه ما باشید!</h6>
-                <img src="./assets/images/اسکرین1.png" class="img-fluid rounded" style="margin-bottom: 15px;" alt="">
+                <img src="./assets/images/oo.png" class="img-fluid rounded" style="margin-bottom: 15px;" alt="">
                 <h6 style="margin-bottom: 20px;">با ثبت ایمیل، از جدید ترین تخفیف ها باخبر شوید</h6>
                 <div class="row">
                     <div class="col-lg-9 mb-3">
@@ -1347,7 +1347,7 @@
                         کالا را ارائه می‌دهد. این ویژگی موجب اعتماد بیشتر مشتریان به خرید آنلاین از فروشگاه اینترنتی
                         دیجی کالا شده است.
 
-                        تخفیف های ویژه و جشنواره ها
+                        تخفیف های ویژه و جشنواره 
                         دیجی کالا به طور منظم جشنواره‌ها و تخفیف‌های ویژه‌ای را برگزار می‌کند که برای مشتریان فرصت خرید
                         کالاهای باکیفیت با قیمت‌های مناسب به همراه خواهد داشت. این تخفیف‌ها در ایام خاص مانند بلک فرایدی
                         یا همان حراج جمعه سیاه و جشنواره‌های تابستانی توجه بسیاری از خریداران را جلب می‌کند. در این
@@ -1379,7 +1379,7 @@
                         نقاشی و رنگ‌آمیزی، آلبوم‌های عکس و فرش‌های دستبافت، به شما این امکان را می‌دهد تا دنیای هنر و
                         خلاقیت خود را به بهترین نحو پرورش دهید. همچنین خر سال تقریبا همزمان با تهران و نمایشگاه بین
                         المللی کتاب، دیجی کالا نمایشگاه کتاب آنلاین خود را برگزار می‌کند تا آنها که فرصت حضور در
-                        نمایشگاه را ندارند، بتوانند مجازی از کتاب ها بازدید و خرید کنند.
+                        نمایشگاه را ندارند، بتوانند مجازی از کتاب  بازدید و خرید کنند.
                         لوازم آرایشی و بهداشتی
                         در دسته محصولات آرایشی و بهداشتی، دیجی کالا مجموعه‌ای از بهترین و پرطرفدارترین برندهای جهانی را
                         در اختیار کاربران قرار می‌دهد. محصولات متنوعی همچون مرطوب كننده‌ها، كرم پودر، ضدآفتاب، ريمل و
