--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>فروشگاه اینترنتی دیجی کالا</title>
     <link rel="stylesheet" href="./assets/bootstrap-5.3.3-dist/css/bootstrap.rtl.css">
     <script src="./assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="./assets/js/script.js" defer></script>
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="./assets/images/v1.webp">
@@ -187,25 +188,31 @@
                             </ul>
                         </div>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary fa fa-calculator" href="#" style="padding-bottom: 5px;margin-top: 5px;"> شگفت‌انگیز‌ها </a>
+                            <a class="nav-link text-secondary fa fa-calculator" href="#"
+                                style="padding-bottom: 5px;margin-top: 5px;"> شگفت‌انگیز‌ها </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary  fa fa-shopping-basket" href="#" style="margin-top: 5px;"> سوپرمارکت </a>
+                            <a class="nav-link text-secondary  fa fa-shopping-basket" href="#" style="margin-top: 5px;">
+                                سوپرمارکت </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary fa fa-bitcoin" href="#" style="margin-top: 5px;"> طلای دیجیتال </a>
+                            <a class="nav-link text-secondary fa fa-bitcoin" href="#" style="margin-top: 5px;"> طلای
+                                دیجیتال </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary  fa fa-fire" href="#" style="margin-top: 5px;"> پر‌فروش‌ترین‌ها </a>
+                            <a class="nav-link text-secondary  fa fa-fire" href="#" style="margin-top: 5px;">
+                                پر‌فروش‌ترین‌ها </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary border-end fa fa-mobile-phone" href="#" style="margin-top: 5px;"> خرید کالای کار کرده </a>
+                            <a class="nav-link text-secondary border-end fa fa-mobile-phone" href="#"
+                                style="margin-top: 5px;"> خرید کالای کار کرده </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" href="#"> سوالی دارید ؟ </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" href="./assets/index2.html" target="_blank"> در دیجی‌کالا بفروشید! </a>
+                            <a class="nav-link text-secondary" href="./assets/index2.html" target="_blank"> در دیجی‌کالا
+                                بفروشید! </a>
                         </li>
                         <li class="nav-item" style="margin-right:115px;">
                             <button class="border rounded-pill  border-white  p-10 " style="margin-right: 90px; ">
@@ -487,22 +494,52 @@
             <div class="col-lg-6 ">
                 <div class="row align-items-center">
                     <div class="col " style="padding-top: 10px;">
+                         <a href="#" class="position-relative">
                         <img src="./assets/images/1.webp" class="img-fluid rounded-circle" alt="">
+                        <span class="position-absolute top-100 start-0 translate-middle badge rounded-pill bg-danger">
+                          55%
+                        </span>
+                         </a>
                     </div>
                     <div class="col" style="padding-top: 10px;">
+                         <a href="#" class="position-relative">
                         <img src="./assets/images/2.webp" class="img-fluid rounded-circle" alt="">
+                        <span class="position-absolute top-100 start-0 translate-middle badge rounded-pill bg-danger">
+                          30%
+                        </span>
+                        </a>
                     </div>
                     <div class="col" style="padding-top: 10px;">
+                         <a href="#" class="position-relative">
                         <img src="./assets/images/3.webp" class="img-fluid rounded-circle" alt="">
+                                               <span class="position-absolute top-100 start-0 translate-middle badge rounded-pill bg-danger">
+                          5%
+                        </span>
+                        </a>
                     </div>
                     <div class="col" style="padding-top: 10px;">
+                        <a href="#" class="position-relative">
                         <img src="./assets/images/4.webp" class="img-fluid rounded-circle" alt="">
+                                               <span class="position-absolute top-100 start-0 translate-middle badge rounded-pill bg-danger">
+                          20%
+                        </span>
+                        </a>
                     </div>
                     <div class="col" style="padding-top: 10px;">
+                         <a href="#" class="position-relative">
                         <img src="./assets/images/5.webp" class="img-fluid rounded-circle" alt="">
+                                               <span class="position-absolute top-100 start-0 translate-middle badge rounded-pill bg-danger">
+                          45%
+                        </span>
+                        </a>
                     </div>
                     <div class="col" style="padding-top: 10px;">
+                        <a href="#" class="position-relative">
                         <img src="./assets/images/6.webp" class="img-fluid rounded-circle" alt="">
+                                               <span class="position-absolute top-100 start-0 translate-middle badge rounded-pill bg-danger">
+                          70%
+                        </span>
+                        </a>
                     </div>
                     <div class="col" style="padding-top: 10px;">
                         <button class="border rounded-pill text-success bg-light border-light" style="width: 140px;">بیش
@@ -1260,7 +1297,7 @@
                 <div class="row">
                     <div class="col-lg-9 mb-3">
                         <input type="email" class="form-control bg-body-secondary" id="exampleFormControlInput1"
-                            placeholder="ایمیل شما" style="margin-right: 5px; padding-left:100px;">
+                            placeholder="ایمیل شما" style="margin-right: 5px; padding-left:150px;">
                     </div>
                     <div class="col-lg-3">
                         <button class="border bg-secondary-subtle text-light rounded-2 text-center"
@@ -1269,36 +1306,34 @@
                 </div>
             </div>
         </div>
-        <div class=" row  rounded-3  mb-3 justify-content-between">
-            <div class="col-lg-7">
+        <div class="row d-flex align-content-center justify-content-center mx-2 my-3  rounded-3 ">
+            <div class="col-lg-12 f-bg p-3">
                 <div class="row">
-                    <div class="col-lg-1">
-                        <img src="./assets/images/bb1.webp" alt="" class="img-fluid" style="margin: 15px;">
+                    <div class="col-lg-6">
+                        <div class="row d-flex justify-content-start align-items-center">
+                            <div class="col-lg-1" style="margin-top: 5px;">
+                                <img src="./assets/images/bb1.webp" alt="..." class="img-fluid">
+                            </div>
+                            <div class="col-lg-7 text-light" style="margin-top: 7px;">
+                                <h5>دانلود اپلیکیشن دیجی کالا</h5>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-lg-8" style="margin-top: 23px;">
-                        <h5 class="text-light">دانلود اپلیکیشن دیجی‌کالا</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4" style="padding-top: 23px;">
-                <div class="row">
-                    <div class="col-lg-1">
-
-                    </div>
-                    <div class="col-lg-3 " style="margin-top:px;">
-                        <img src="./assets/images/bb2.svg" class="img-fluid " alt="">
-                    </div>
-                    <div class="col-lg-3">
-                        <img src="./assets/images/bb3.svg" class="img-fluid " alt="">
-                    </div>
-                    <div class="col-lg-3">
-                        <img src="./assets/images/bb4.svg" class="img-fluid " alt="">
-                    </div>
-                    <div class="col-lg-1 bg-white rounded" style="padding-top: 6px;">
-                        <img src="./assets/images/mm.svg" class="img-fluid " style="margin-bottom:6px; " alt="">
-                    </div>
-                    <div class="col-lg-1">
-
+                    <div class="col-lg-6">
+                        <div class="row d-flex justify-content-end align-items-center">
+                            <div class="col-lg-auto rounded-1">
+                                <img src="./assets/images/bb2.svg" alt="..." class="img-fluid">
+                            </div>
+                            <div class="col-lg-auto">
+                                <img src="./assets/images/bb3.svg" alt="..." class="img-fluid">
+                            </div>
+                            <div class="col-lg-auto">
+                                <img src="./assets/images/bb4.svg" alt="..." class="img-fluid">
+                            </div>
+                            <div class="col-lg-auto bg-light rounded-1 p-2 mx-1">
+                                <img src="./assets/images/mm.svg" alt="..." class="img-fluid">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1347,7 +1382,7 @@
                         کالا را ارائه می‌دهد. این ویژگی موجب اعتماد بیشتر مشتریان به خرید آنلاین از فروشگاه اینترنتی
                         دیجی کالا شده است.
 
-                        تخفیف های ویژه و جشنواره 
+                        تخفیف های ویژه و جشنواره
                         دیجی کالا به طور منظم جشنواره‌ها و تخفیف‌های ویژه‌ای را برگزار می‌کند که برای مشتریان فرصت خرید
                         کالاهای باکیفیت با قیمت‌های مناسب به همراه خواهد داشت. این تخفیف‌ها در ایام خاص مانند بلک فرایدی
                         یا همان حراج جمعه سیاه و جشنواره‌های تابستانی توجه بسیاری از خریداران را جلب می‌کند. در این
@@ -1379,7 +1414,7 @@
                         نقاشی و رنگ‌آمیزی، آلبوم‌های عکس و فرش‌های دستبافت، به شما این امکان را می‌دهد تا دنیای هنر و
                         خلاقیت خود را به بهترین نحو پرورش دهید. همچنین خر سال تقریبا همزمان با تهران و نمایشگاه بین
                         المللی کتاب، دیجی کالا نمایشگاه کتاب آنلاین خود را برگزار می‌کند تا آنها که فرصت حضور در
-                        نمایشگاه را ندارند، بتوانند مجازی از کتاب  بازدید و خرید کنند.
+                        نمایشگاه را ندارند، بتوانند مجازی از کتاب بازدید و خرید کنند.
                         لوازم آرایشی و بهداشتی
                         در دسته محصولات آرایشی و بهداشتی، دیجی کالا مجموعه‌ای از بهترین و پرطرفدارترین برندهای جهانی را
                         در اختیار کاربران قرار می‌دهد. محصولات متنوعی همچون مرطوب كننده‌ها، كرم پودر، ضدآفتاب، ريمل و
@@ -1632,7 +1667,7 @@
             </div>
         </div>
     </div>
-   
+
 </body>
 
 </html>
